--- a/src/Components/Admin/AdminDashboard.css
+++ b/src/Components/Admin/AdminDashboard.css
@@ -2,6 +2,11 @@
     display: flex;
     justify-content: space-evenly;
     margin-left: -10%;
+    /* width: 100vw;
+    height: 100vh; */
     /* Use flexbox to create side-by-side layout */
 }
+
+
+
 
