--- a/src/Components/Admin/TeacherPage.css
+++ b/src/Components/Admin/TeacherPage.css
@@ -1,14 +1,15 @@
+/* TeacherPage.css */
+
 body {
     overflow-x: hidden;
 }
 
-.student-page-container {
+.teacher-page-container {
     margin-left: 300px;
     margin-top: 40px;
-    
 }
 
-.student-card {
+.teacher-card {
     flex: 1;
     margin: 5px;
     max-width: calc(85% - 20px);
@@ -16,16 +17,14 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     border-radius: 10px;
-    
 }
 
-.student-card:hover{
+.teacher-card:hover {
     transform: translatey(-5px);
 }
 
-
 @media (max-width: 768px) {
-    .student-page-container {
+    .teacher-page-container {
         margin-left: 10px;
         /* Reset margin-top for mobile view */
     }
